# DeepPlantSV

./: README.md  pyproject.toml  requirements.txt
scripts/: predict.py  train.py
src/DeepPlantSV/: __init__.py  bioinformatics.py  constants.py  datasets.py  features.py  io_utils.py  losses.py  models.py  training.py  utils.py
